rust/crates/ccusage/tests/snapshots/devin_cli__devin_cli_daily_table.snap
---
source: crates/ccusage/tests/devin_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│          Devin Token Usage Report          │
│                                            │
╰────────────────────────────────────────────╯

┌────────────┬───────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Date       │ Models        │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2099-01-02 │ - swe-1.7     │       400 │       100 │           200 │         400 │         1,100 │       $0.00 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2099-01-03 │ - swe-1.7     │       200 │        50 │             0 │         300 │           550 │       $0.00 │
├────────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total      │               │       600 │       150 │           200 │         700 │         1,650 │       $0.00 │
└────────────┴───────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘

stderr:
WARN  Missing embedded pricing for swe-1.7; cost excludes this model. Run without --offline or update ccusage after pricing is added.
