rust/crates/ccusage/tests/snapshots/devin_cli__devin_cli_monthly_table.snap
---
source: crates/ccusage/tests/devin_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│          Devin Token Usage Report          │
│                                            │
╰────────────────────────────────────────────╯

┌──────────┬───────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Month    │ Models        │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2099-01  │ - swe-1.7     │       600 │       150 │           200 │         700 │         1,650 │       $0.00 │
├──────────┼───────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total    │               │       600 │       150 │           200 │         700 │         1,650 │       $0.00 │
└──────────┴───────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘

stderr:
WARN  Missing embedded pricing for swe-1.7; cost excludes this model. Run without --offline or update ccusage after pricing is added.
