rust/crates/ccusage/tests/snapshots/devin_cli__devin_cli_session_table.snap
---
source: crates/ccusage/tests/devin_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│          Devin Token Usage Report          │
│                                            │
╰────────────────────────────────────────────╯

┌──────────┬───────────────┬───────────┬───────────┬─────────────┬────────────┬────────────┬────────────┬──────────────┐
│ Session  │ Models        │     Input │    Output │       Cache │ Cache Read │      Total │ Cost (USD) │ Last         │
│          │               │           │           │      Create │            │     Tokens │            │ Activity     │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ veil-vi… │ - swe-1.7     │       600 │       150 │         200 │        700 │      1,650 │      $0.00 │ 2099-01-03   │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ Total    │               │       600 │       150 │         200 │        700 │      1,650 │      $0.00 │              │
└──────────┴───────────────┴───────────┴───────────┴─────────────┴────────────┴────────────┴────────────┴──────────────┘

stderr:
WARN  Missing embedded pricing for swe-1.7; cost excludes this model. Run without --offline or update ccusage after pricing is added.
